# Shallow_DA

./: .gitignore  README.md  launch1.sh  main.py  pyproject.toml
conf/: config.yaml
conf/augmentations/: no_transforms.yaml  transforms.yaml
conf/dataset/: cityscapes.yaml  combined_st.yaml  gta.yaml  gta_colab.yaml  gta_cs_mixed.yaml  nthu.yaml  synscapes.yaml  synthia.yaml
conf/losses/: crossentropy.yaml  weighted_crossentropy.yaml
conf/optimizer/: adamw.yaml  sgd.yaml
dataloader/: segmentation_data_module.py
datasets/: segmentation_dataset.py  transformations.py
models/: baseline.py  segmentation_trainer.py
networks/: arc1.py  baseline.py  classifier.py  concat.py  layers.py  net.py  proda.py  resnet.py  warp_edge_old_47.8.py
notebooks/: edge_band16.py  edge_band4.py  edge_band8.py  edge_validation.py  evaluate_and_visualize.py  filtered_synthia.py  generate_pseudo_label.py  generate_pseudo_label_DACS.py  generate_pseudo_label_NTHU.py  generate_pseudo_label_SYNTHIA.py  generate_sample.py  make_split.py  mmd.py  mmd_selection.py  predictions_edge_masked.py  visualize_semantic_labels.py
splits/cityscapes/: train.txt  train2.txt  train_distillation.txt  val.txt
splits/gta/: selected_train.txt  target.txt  train.txt  train_dacs.txt  train_jpg.txt  train_test.txt  val.txt  val_jpg.txt
splits/mixed/: train.txt  train_mixed.txt  train_mixed_selected.txt  train_selected.txt
splits/mixed_nthu/: mixed_rio.txt  mixed_rome.txt  mixed_taipei.txt  mixed_tokyo.txt  train_rio.txt  (+7 more)
utils/: callbacks.py  losses.py  metrics.py  optimizers.py  vis_flow.py
(+27 files in other folders)
