[tool.poetry]
name = "shallow"
version = "0.1.0"
description = ""
authors = ["adricarda <cardace6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hydra-core = "^1.0.4"
wandb = "^0.10.11"
opencv-python = "^4.4.0"
matplotlib = "^3.3.3"
pytorch-lightning = "^1.0.8"
scikit-image = "^0.17.2"
ipykernel = "^6.0.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
